I developed more pages, put informations.

--- a/anatomia.html
+++ b/anatomia.html
@@ -100,7 +100,7 @@
 							<li class="has-dropdown">
 								<a href="wiedza.html">O raku jajnika</a>
 								<ul class="dropdown">
-									<li><a href="anatomia.html">Anatomia</a></li>									
+									<li class="active"><a href="anatomia.html">Anatomia</a></li>									
 									<li><a href="objawy.html">Objawy</a></li>
 									<li><a href="klasyfikacja.html">Klasyfikacja</a></li>
 									<li><a href="rokowania.html">Rokowania</a></li>
@@ -109,7 +109,7 @@
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li class="active"><a href="o mnie.html">O mnie</a></li>
+							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -123,14 +123,13 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_4.jpg);">
+		   	<li style="background-image: url(images/macica_anatomia.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1 class="heading-section">blogie &amp; Events</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+			   					<h1 class="heading-section">Anatomia</h1>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -140,92 +139,38 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-O mnie">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>O mnie &amp; Events</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row row-padded-mb">
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">USA, International Triathlon Event</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">USA, International Triathlon Event</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">New Device Develope by Microsoft</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-1.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-2.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-3.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<body>
+	
+<div id="fh5co-leczenie" class="fh5co-bg-section">	
+<div style="text-align: left; margin: 0 20%;">
+    <h2 style="color:rgb(234, 138, 219);">Anatomia prawidłowa jajnika</h2>
+	<img id="sideImage" src="images/budowa_janiki.jpg" alt="Budowa jajnika">
+	<p>Jajnik to parzysty gruczoł wewnętrzny, który znajduje się w miednicy mniejszej kobiety. Ma kształt owalny, przypominający migdał i waży około 5-8 g. Jajniki znajdują się wewnątrz jamy otrzewnej, przy bocznych ścianach miednicy, na tylnej powierzchni wiązadeł szerokich macicy, do których są przytwierdzone za pomocą krótkich krezek. Wiązadło jajnika własne łączy koniec maciczny jajnika z rogiem macicy. Górne bieguny jajników są otoczone przez jajowody. Jajniki pełnią podwójną funkcję, produkując komórki jajowe i wytwarzając żeńskie hormony płciowe, takie jak estrogeny, progesteron, relaksyna i androgeny.</p>
+	<p>Jajnik składa się z trzech rodzajów komórek:</p>
+    <ul>
+        <li>Komórki nabłonkowe pokrywają powierzchnię jajnika. Pokrywają również jajowody.</li>
+        <li>Komórki zarodkowe są komórkami rozrodczymi jajników. Są również nazywane komórkami jajowymi lub oocytami.</li>
+        <li>Komórki mezodermalne tworzą pewne rodzaje tkanki łącznej. Produkują estrogen i progesteron.</li>
+    </ul>
+	<p>Z zewnątrz, jajniki są pokryte jednowarstwowym nabłonkiem płciowym, a pod nim znajduje się błona biaława. Na przekroju jajnika można zauważyć dwuwarstwową strukturę. Kora jajnika, czyli warstwa miąższowa, zawiera pęcherzyki jajnikowe, w których rozwijają się komórki jajowe. Bezpośrednio pod błoną białawą znajdują się pęcherzyki jajnikowe pierwotne, a głębiej dojrzewające, dojrzałe oraz ciałko żółte. Pod korą jajnika znajduje się rdzeń jajnika, zawierający liczne naczynia krwionośne odżywiające warstwę miąższową.</p>
+	<p>Od momentu osiągnięcia dojrzałości płciowej, aż do menopauzy (przez około 35–40 lat), co 28 dni dojrzewa w jajniku pęcherzyk Graafa, który zawiera komórkę jajową. Dojrzały pęcherzyk ma średnicę 1–1,5 cm, a komórka jajowa około 0,2 mm. Proces dojrzewania pęcherzyka jest sterowany hormonem folikulotropowym, a pęknięcie pęcherzyka następuje pod wpływem hormonu luteinizującego, co umożliwia uwolnienie jaja. Po pęknięciu pęcherzyka, komórka jajowa dostaje się do jajowodu, a pozostała część pęcherzyka przekształca się w ciałko czerwone, a następnie w ciałko żółte, które wydziela progesteron, niezbędny dla implantacji zapłodnionego jaja w śluzówce macicy.</p>
+    <h2 style="color:rgb(234, 138, 219);">Czym jest rak jajnika?</h2>
+	<p>Rak jajnika jest nieprawidłowym i nieustającym wzrostem komórek nowotworowych wywodzących się z komórek jajnika. Nowotwór często rozwija się w komórkach nabłonkowych jajnika, dotykając różne obszary, takie jak korę, rdzeń, a także struktury naczyniowe i nerwowe. Stanowi to około 85% do 90% wszystkich przypadków raka jajnika. Pęcherzyki jajnikowe, odpowiedzialne za wytwarzanie komórek jajowych, mogą być zastąpione przez komórki nowotworowe, co wpływa na zdolność jajników do prawidłowego procesu owulacji. Wpływ raka objawia się także na błonę białawą i warstwę naczyniową rdzenia jajnika, zaburzając dostarczanie krwi i substancji odżywczych. Zewnętrzny wygląd jajnika może ulec zmianie, prowadząc do zmiany kształtu, wielkości lub konsystencji. Wnęka jajnika, miejsce wejścia i wyjścia naczyń i nerwów, może być również związana z procesami nowotworowymi.</p>
+	<p style="color:rgb(234, 138, 219); " class="pink-bold"> Warto podkreślić, że rak jajnika często przebiega bezobjawowo we wczesnych stadiach, co sprawia, że diagnoza jest często stawiana w zaawansowanym stadium. Regularne badania profilaktyczne i świadomość objawów są kluczowe dla wczesnego wykrycia i skuteczniejszego leczenia tej choroby. Zrozumienie zmian w anatomii jajników związanych z rakiem jest fundamentalne dla skutecznej opieki nad pacjentkami i prowadzenia właściwego leczenia.</p>
+</div>
 
-	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 animate-box">
-				<div class="date-counter text-center">
-					<h2>Get 400 of Online wiedza for Free</h2>
-					<h3>By Mike Smith</h3>
-					<div class="simply-countdown simply-countdown-one"></div>
-					<p><strong>Limited Offer, Hurry Up!</strong></p>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Register Now!</a></p>
-				</div>
+<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
+	<div class="overlay"></div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 animate-box">
+			<div class="date-counter text-center">
+				<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+				<div class="simply-countdown simply-countdown-one"></div>
+				<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<footer id="fh5co-footer" role="contentinfo" style="background-image: url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
