--- a/diagnoza.html
+++ b/diagnoza.html
@@ -96,19 +96,20 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="wiedza.html">O raku jajnika</a></li>
+							<li class="has-dropdown">
+								<a href="wiedza.html">O raku jajnika</a>
+								<ul class="dropdown">
+									<li><a href="anatomia.html">Anatomia</a></li>									
+									<li><a href="objawy.html">Objawy</a></li>
+									<li><a href="klasyfikacja.html">Klasyfikacja</a></li>
+									<li><a href="rokowania.html">Rokowania</a></li>
+								</ul>
+							</li>
+
 							<li class="active"><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li class="has-dropdown">
-								<a href="O mnie.html">O mnie</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
+							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -151,7 +152,7 @@
 							</ul>
 						</div>
 						<h3><a href="#">Konsultacja i Wywiad</a></h3>
-						<p>Rozpoczyna się od szczegółowej rozmowy z pacjentką w celu zrozumienia jej objawów, historii zdrowia oraz czynników ryzyka.</p>
+						<p>Rozpoczyna się od szczegółowej rozmowy z pacjentką w celu zrozumienia jej objawów, historii zdrowia oraz czynników ryzyka. Ważne jest, aby kobiety były świadome swojego ciała i zgłaszały wszelkie nietypowe objawy lekarzowi. Objawy raka jajnika w wczesnych stadiach mogą być trudne do wykrycia, ale nie zawsze są bezobjawowe.</p>
 					</div>
 				</div>
 				<div class="col-md-3 animate-box text-center">
@@ -162,7 +163,7 @@
 							</ul>
 						</div>
 						<h3><a href="#">Badania Obrazowe</a></h3>
-						<p>Wykorzystuje się ultrasonografię, tomografię komputerową (TK) lub rezonans magnetyczny (MRI) do uzyskania obrazów narządów miednicy.</p>
+						<p>Wykorzystuje się ultrasonografię, tomografię komputerową (TK) lub rezonans magnetyczny (MRI) do uzyskania obrazów narządów miednicy. Te badania pozwalają uzyskać obrazy struktur wewnętrznych organizmu, wspierając proces diagnozy chorób.</p>
 					</div>
 				</div>
 				<div class="col-md-3 animate-box text-center">
@@ -188,7 +189,19 @@
 						<p>Lekarze analizują wyniki badań obrazowych, markerów nowotworowych i histopatologii i na podstawie tych danych formułują ostateczną diagnozę i decydują o dalszym planie leczenia.</p>
 					</div>
 				</div>
-			
+				<div class="container">
+					<div class="row">
+						<div class="col-md-12 text-center">
+							<hr class="black-line">
+
+							<div class="info-block">
+								<h2 style="color:rgb(234, 138, 219)";>Dodatkowe Informacje</h2>
+								<p> Systemowe badania przesiewowe mające na celu wczesne wykrywanie raka jajnika nie są rutynowo przeprowadzane. U kobiet z obciążeniem dziedzicznym raka piersi i jajnika (potwierdzone obecnością mutacji genu BRCA1/2) zaleca się częstsze badania kontrolne, zaś po 35 roku życia profilaktyczne wycięcie jajników z przydatkami. </p>
+							</div>
+						</div>
+					</div>
+				</div>
+				
 				</div>
 			</div>
 		</div>
@@ -201,7 +214,7 @@
 				<div class="date-counter text-center">
 					<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
 					<div class="simply-countdown simply-countdown-one"></div>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki :)!</a></p>
+					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
 				</div>
 			</div>
 		</div>
