--- a/profilaktyka.html
+++ b/profilaktyka.html
@@ -97,19 +97,21 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li class="has-dropdown">
+							<li class="active has-dropdown">
 								<a href="wiedza.html">O raku jajnika</a>
 								<ul class="dropdown">
-									<li><a href="anatomia.html">Anatomia</a></li>									
-									<li><a href="objawy.html">Objawy</a></li>
-									<li><a href="klasyfikacja.html">Klasyfikacja</a></li>
-									<li><a href="rokowania.html">Rokowania</a></li>
+									<ul class="dropdown">
+                                        <li><a href="anatomia.html">Anatomia</a></li>									
+                                        <li><a href="objawy.html">Objawy</a></li>
+                                        <li><a href="klasyfikacja.html">Klasyfikacja</a></li>
+                                        <li><a href="rokowania.html">Rokowania</a></li>
+                                    </ul>
 								</ul>
 							</li>
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li class="active"><a href="o mnie.html">O mnie</a></li>
+							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -123,14 +125,13 @@
 	<aside id="fh5co-hero">
 		<div class="flexslider">
 			<ul class="slides">
-		   	<li style="background-image: url(images/img_bg_4.jpg);">
+		   	<li style="background-image: url(images/o_raku.jpg); background-position: center;">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1 class="heading-section">blogie &amp; Events</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+			   					<h1 class="heading-section">Profilaktyka raka jajnika</h1>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -140,92 +141,26 @@
 	  	</div>
 	</aside>
 
-	<div id="fh5co-O mnie">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>O mnie &amp; Events</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row row-padded-mb">
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">USA, International Triathlon Event</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">USA, International Triathlon Event</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-				<div class="col-md-4 animate-box">
-					<div class="fh5co-event">
-						<div class="date text-center"><span>15<br>Mar.</span></div>
-						<h3><a href="#">New Device Develope by Microsoft</a></h3>
-						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						<p><a href="#">Read More</a></p>
-					</div>
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-1.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-2.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-				<div class="col-lg-4 col-md-4">
-					<div class="fh5co-O mnie animate-box">
-						<a href="#" class="O mnie-img-holder" style="background-image: url(images/project-3.jpg);"></a>
-						<div class="O mnie-text">
-							<h3><a href="#">Healty Lifestyle &amp; Living</a></h3>
-							<span class="posted_on">March. 15th</span>
-							<span class="comment"><a href="">21<i class="icon-speech-bubble"></i></a></span>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-						</div> 
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+	<body>
+	
+<div id="fh5co-leczenie" class="fh5co-bg-section">	
+<div style="text-align: left; margin: 0 20%;">
+    <h2 style="color:rgb(234, 138, 219);">Klasyfikacja histopatologiczna raka jajnika</h2>
+    
+</div>
 
-	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 animate-box">
-				<div class="date-counter text-center">
-					<h2>Get 400 of Online wiedza for Free</h2>
-					<h3>By Mike Smith</h3>
-					<div class="simply-countdown simply-countdown-one"></div>
-					<p><strong>Limited Offer, Hurry Up!</strong></p>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Register Now!</a></p>
-				</div>
+<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
+	<div class="overlay"></div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 animate-box">
+			<div class="date-counter text-center">
+				<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+				<div class="simply-countdown simply-countdown-one"></div>
+				<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<footer id="fh5co-footer" role="contentinfo" style="background-image: url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
