--- a/wiedza.html
+++ b/wiedza.html
@@ -100,26 +100,16 @@
 							<li class="active has-dropdown">
 								<a href="wiedza.html">O raku jajnika</a>
 								<ul class="dropdown">
-									<li><a href="#">Czym jest rak jajnika?</a></li>
-									<li><a href="#">Kto jest w grupie ryzyka?</a></li>
-									<li><a href="#">Objawy</a></li>
-									<li><a href="#">Typy</a></li>
-									<li><a href="#">Profilaktyka</a></li>
-									<li><a href="#">Chemioterapia</a></li>
+									<li><a href="anatomia.html">Anatomia</a></li>									
+									<li><a href="objawy.html">Objawy</a></li>
+									<li><a href="klasyfikacja.html">Klasyfikacja</a></li>
+									<li><a href="rokowania.html">Rokowania</a></li>
 								</ul>
 							</li>
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li class="has-dropdown">
-								<a href="O mnie.html">O mnie</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
+							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -150,7 +140,8 @@
 	</aside>
 
 	<body>
-
+	
+<div id="fh5co-leczenie" class="fh5co-bg-section">	
 <div style="text-align: left; margin: 0 20%;">
     <h2 style="color:rgb(234, 138, 219);">Czym jest rak jajnika?</h2>
     <p>Rak jajnika obejmuje nowotwory, które rozpoczynają się w jajnikach, jajowodach i błonie jamy brzusznej (otrzewnej). Lekarze używają testów obrazowych i badają tkanki, aby określić, gdzie rak się zaczął. Nowotwory, które zaczynają się w tych trzech obszarach, zachowują się podobnie i są leczone podobnie, dlatego grupuje się je jako rak jajnika. Zdrowe komórki rosną, dzielą się i umierają w kontrolowanym procesie. Komórki nowotworowe są inne, ponieważ:</p>
@@ -211,23 +202,21 @@
 		</ul>
 	<h2 style="color:rgb(234, 138, 219);">Jakie są rokowania w przypadku raka jajnika?</h2>	
 	<p>Perspektywy w przypadku raka jajnika są bardzo zróżnicowane, ponieważ każda osoba reaguje inaczej na leczenie, a wyniki są uzależnione od wielu czynników. Wskaźniki przeżycia stanowią ogólną ocenę, pokazującą, ile osób pozostaje przy życiu w określonym okresie po rozpoznaniu lub rozpoczęciu leczenia, zazwyczaj przez pięć lat. Warto podkreślić, że wskaźniki przeżycia to oszacowania, a nie pewne prognozy. W historii, wskaźnik pięcioletniego przeżycia dla raka jajnika w stadium I wynosił ponad 95%. Jednak te wskaźniki różnią się w zależności od rodzaju raka jajnika, przy czym niektóre nowotwory są bardziej agresywne niż inne, niezależnie od etapu diagnozy. Ostatnie badania kliniczne sugerują, że u niektórych kobiet zdiagnozowanych w późnych stadiach choroby prognozy są korzystne, co może wynikać z mniej agresywnego charakteru ich konkretnego nowotworu. Specjaliści nadal prowadzą badania w celu zrozumienia, dlaczego tak się dzieje.</p>
+    
 </div>
-```
 
-	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 animate-box">
-				<div class="date-counter text-center">
-					<h2>Get 400 of Online wiedza for Free</h2>
-					<h3>By Mike Smith</h3>
-					<div class="simply-countdown simply-countdown-one"></div>
-					<p><strong>Limited Offer, Hurry Up!</strong></p>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Register Now!</a></p>
-				</div>
+<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
+	<div class="overlay"></div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 animate-box">
+			<div class="date-counter text-center">
+				<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+				<div class="simply-countdown simply-countdown-one"></div>
+				<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<footer id="fh5co-footer" role="contentinfo" style="background-image: url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
