--- a/wsparcie.html
+++ b/wsparcie.html
@@ -69,7 +69,7 @@
 
 	</head>
 	<body>
-		
+	
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
@@ -96,19 +96,19 @@
 					<div class="col-xs-10 text-right menu-1">
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="wiedza.html">O raku jajnika</a></li>
+							<li class="has-dropdown">
+								<a href="wiedza.html">O raku jajnika</a>
+								<ul class="dropdown">
+									<li><a href="anatomia.html">Anatomia</a></li>									
+									<li><a href="objawy.html">Objawy</a></li>
+									<li><a href="klasyfikacja.html">Klasyfikacja</a></li>
+									<li><a href="rokowania.html">Rokowania</a></li>
+								</ul>
+							</li>
 							<li><a href="diagnoza.html">Diagnoza</a></li>
 							<li><a href="leczenie.html">Leczenie</a></li>
 							<li class="active"><a href="wsparcie.html">Wsparcie pacjentek</a></li>
-							<li class="has-dropdown">
-								<a href="O mnie.html">O mnie</a>
-								<ul class="dropdown">
-									<li><a href="#">Web Design</a></li>
-									<li><a href="#">eCommerce</a></li>
-									<li><a href="#">Branding</a></li>
-									<li><a href="#">API</a></li>
-								</ul>
-							</li>
+							<li><a href="O mnie.html">O mnie</a></li>
 							<li><a href="kontakt.html">Kontakt</a></li>
 							
 						</ul>
@@ -128,8 +128,7 @@
 		   			<div class="row">
 			   			<div class="col-md-8 col-md-offset-2 text-center slider-text">
 			   				<div class="slider-text-inner">
-			   					<h1 class="heading-section">Plan &amp; wsparcie</h1>
-									<h2>Free html5 templates Made by <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
+			   					<h1 class="heading-section">W tej trudnej chwili nie jesteś sama. Wokół Ciebie jest społeczność gotowa służyć wsparciem, zrozumieniem i siłą</h1>
 			   				</div>
 			   			</div>
 			   		</div>
@@ -139,122 +138,39 @@
 	  	</div>
 	</aside>
 
+	
 	<div id="fh5co-wsparcie" class="fh5co-bg-section">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-6 col-md-offset-3 text-center fh5co-heading">
-					<h2>Plan &amp; wsparcie</h2>
-					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>
-				</div>
-			</div>
-			<div class="row">
-				<div class="wsparcie wsparcie--rabten">
-					<div class="col-md-4 animate-box">
-						<div class="wsparcie__item">
-							<div class="wrap-price">
-								 <!-- <div class="icon icon-user2"></div> -->
-	                     <h3 class="wsparcie__title">Trial</h3>
-	                     <!-- <p class="wsparcie__sentence">Single user license</p> -->
-							</div>
-                     <div class="wsparcie__price">
-                        <span class="wsparcie__anim wsparcie__anim--1">
-								<span class="wsparcie__currency">$</span>0
-                        </span>
-                        <span class="wsparcie__anim wsparcie__anim--2">
-								<span class="wsparcie__period">per year</span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="wsparcie__feature-list">
-	                        <li class="wsparcie__feature">One Day Trial</li>
-	                        <li class="wsparcie__feature">Limited wiedza</li>
-	                        <li class="wsparcie__feature">Free 3 Lessons</li>
-	                        <li class="wsparcie__feature">No Supporter</li>
-	                        <li class="wsparcie__feature">No Tutorial</li>
-	                        <li class="wsparcie__feature">No Ebook</li>
-	                         <li class="wsparcie__feature">Limited Registered User</li>
-	                     </ul>
-	                     <button class="wsparcie__action">Choose plan</button>
-                     </div>
-                  </div>
-					</div>
-					<div class="col-md-4 animate-box">
-						<div class="wsparcie__item">
-							<div class="wrap-price">
-								<!-- <div class="icon icon-store"></div> -->
-	                     <h3 class="wsparcie__title">Silver</h3>
-	                     <!-- <p class="wsparcie__sentence">Up to 5 users</p> -->
-							</div>
-                     <div class="wsparcie__price">
-                        <span class="wsparcie__anim wsparcie__anim--1">
-								<span class="wsparcie__currency">$</span>79
-                        </span>
-                        <span class="wsparcie__anim wsparcie__anim--2">
-								<span class="wsparcie__period">per year</span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="wsparcie__feature-list">
-	                        <li class="wsparcie__feature">One Year Standard Access</li>
-	                        <li class="wsparcie__feature">Limited wiedza</li>
-	                        <li class="wsparcie__feature">300+ Lessons</li>
-	                        <li class="wsparcie__feature">Random Supporter</li>
-	                        <li class="wsparcie__feature">View Only Ebook</li>
-	                        <li class="wsparcie__feature">Standard Tutorials</li>
-	                         <li class="wsparcie__feature">Unlimited Registered User</li>
-	                     </ul>
-	                     <button class="wsparcie__action">Choose plan</button>
-                     </div>
-                 </div>
-					</div>
-					<div class="col-md-4 animate-box">
-                  <div class="wsparcie__item">
-                  	<div class="wrap-price">
-                  		<!-- <div class="icon icon-home2"></div> -->
-	                     <h3 class="wsparcie__title">Gold</h3>
-	                     <!-- <p class="wsparcie__sentence">Unlimited users</p> -->
-							</div>
-                     <div class="wsparcie__price">
-                        <span class="wsparcie__anim wsparcie__anim--1">
-								<span class="wsparcie__currency">$</span>499
-                        </span>
-                        <span class="wsparcie__anim wsparcie__anim--2">
-								<span class="wsparcie__period">per year</span>
-                        </span>
-                     </div>
-                     <div class="wrap-price">
-                     	<ul class="wsparcie__feature-list">
-	                        <li class="wsparcie__feature">Life Time Access</li>
-	                        <li class="wsparcie__feature">Unlimited All wiedza</li>
-	                        <li class="wsparcie__feature">7000+ Lessons &amp; Growing</li>
-	                        <li class="wsparcie__feature">Free Supporter</li>
-	                        <li class="wsparcie__feature">Free Ebook Downloads</li>
-	                        <li class="wsparcie__feature">Premium Tutorials</li>
-	                         <li class="wsparcie__feature">Unlimited Registered User</li>
-	                     </ul>
-	                     <button class="wsparcie__action">Choose plan</button>
-                     </div>
-                  </div>
-               </div>
-            </div>
-			</div>
-		</div>
-	</div>
+	<div style="text-align: left; margin: 0 20%;">
+    <h2 style="color:rgb(234, 138, 219);">Lista fundacji onkologicznych</h2>
+	<p>W tej trudnej podróży walki z rakiem jajnika warto skorzystać z pomocy i wsparcia fundacji onkologicznych. Poniżej znajdziesz fundacje, które oferują wsparcie pacjentom onkologicznym. </p>
 
-	<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
-		<div class="overlay"></div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2 animate-box">
-				<div class="date-counter text-center">
-					<h2>Get 400 of Online wiedza for Free</h2>
-					<h3>By Mike Smith</h3>
-					<div class="simply-countdown simply-countdown-one"></div>
-					<p><strong>Limited Offer, Hurry Up!</strong></p>
-					<p><a href="#" class="btn btn-primary btn-lg btn-reg">Register Now!</a></p>
-				</div>
+	<ol>
+		<li>STOWARZYSZENIE NIEBIESKI MOTYL</li>
+		<p>Stowarzyszenie powstało, by pomagać kobietom dotkniętym nowotworem sfery intymnej, a w szczególności rakiem jajnika. Aby przejść na stronę <a href="https://niebieskimotyl.pl/" target="_blank"> kliknij tutaj.</a></p>
+		<li>FUNDACJA RAK'N'ROLL</li>
+		<p>Fundacja powstała z inicjatywy Magdy Prokopowicz, która po chorobie onkologicznej postanowiła szerzyć wiedzę na temat nowotworów w sferze publicznej. Aby przejść na stronę <a href="https://www.raknroll.pl/fundacja/idea/" target="_blank"> kliknij tutaj.</a></p>
+		<li>FUNDACJA ONKOLOGICZNE RAKIETY</li>
+		<p>Fundacja założona przez Maję, Bartka i Michała, którzy poznali się na oddziale onkologicznym. Cała trójka marzyła, aby stworzyć miejsce, gdzie człowiek będzie na pierwszym miejscu. Aby przejść na stronę <a href="https://fundacjarakiety.pl/" target="_blank"> kliknij tutaj.</a></p>
+		<li>FUNDACJA ALIVIA</li>
+		<p>Fundacja poświęcona wszystkim pacjentom onkologicznym, którzy oprócz wsparcia psychicznego potrzebują także wsparcia finansowego. Aby przejść na stronę <a href="https://alivia.org.pl/" target="_blank"> kliknij tutaj.</a></p>
+		<li>FUNDACJA AVALON</li>
+		<p>Fundacja wspierająca osoby z niepełnosprawnościami oraz przewlekle chore.  Aby przejść na stronę <a href="https://www.fundacjaavalon.pl/" target="_blank"> kliknij tutaj.</a></p>
+
+	</ol>
+
+</div>
+<div id="fh5co-register" style="background-image: url(images/img_bg_2.jpg);">
+	<div class="overlay"></div>
+	<div class="row">
+		<div class="col-md-8 col-md-offset-2 animate-box">
+			<div class="date-counter text-center">
+				<h2>Do bezpłatnych badań przesiewowych pozostało:</h2>
+				<div class="simply-countdown simply-countdown-one"></div>
+				<p><a href="#" class="btn btn-primary btn-lg btn-reg">Sprawdź dostępne placówki!</a></p>
 			</div>
 		</div>
 	</div>
+</div>
 
 	<footer id="fh5co-footer" role="contentinfo" style="background-image: url(images/img_bg_4.jpg);">
 		<div class="overlay"></div>
@@ -368,4 +284,5 @@
 	</script>
 	</body>
 </html>
+
 
